ingress-controller.yaml
kind: Service
apiVersion: v1
metadata:
  name: ingress-lal-nonprod
  namespace: ingress-lal-nonprod
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-lal-nonprod-nginx
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: ingress-lal-nonprod
  labels:
    app.kubernetes.io/name: ingress-lal-nonprod-nginx
    app.kubernetes.io/part-of: ingress-lal-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-lal-nonprod-nginx
      app.kubernetes.io/part-of: ingress-lal-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-lal-nonprod-nginx
        app.kubernetes.io/part-of: ingress-lal-nginx
      annotations:
        prometheus.io/port: "10254"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: nginx-lal-nonprod-ingress-serviceaccount
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.20.0
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/nginx-configuration
            - --publish-service=$(POD_NAMESPACE)/ingress-lal-nonprod
            - --annotations-prefix=nginx.ingress.kubernetes.io
            - --ingress-class=ingress-lal-nonprod
            - --enable-ssl-passthrough
          securityContext:
            capabilities:
              drop:
                # Everything but NET_BIND_SERVICE
                - SETPCAP
                - MKNOD
                - AUDIT_WRITE
                - CHOWN
                - NET_RAW
                - DAC_OVERRIDE
                - FOWNER
                - FSETID
                - KILL
                - SETGID
                - SETUID
                - SYS_CHROOT
                - SETFCAP
            # www-data -> 33
            runAsUser: 33
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
---
